--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B verify --file pom.xml
+
+  deploy-heroku:
+    - needs: build
+    - name: Deploy to Heroku
+      uses: AkhileshNS/heroku-deploy@v3.12.12
+      heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+      heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+      heroku_email: ${{secrets.HEROKU_EMAIL}}
