--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,9 +26,13 @@ jobs:
       run: mvn -B verify --file pom.xml
 
   deploy-heroku:
-    - needs: build
-    - name: Deploy to Heroku
-      uses: AkhileshNS/heroku-deploy@v3.12.12
-      heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-      heroku_email: ${{secrets.HEROKU_EMAIL}}
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: 'Deploy to Heroku'
+    - uses: actions/checkout@v2
+    - uses: AkhileshNS/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
