heroku deployment with health check

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,8 @@ jobs:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
         heroku_email: ${{secrets.HEROKU_EMAIL}}
+        healthcheck: "https://spring-boot-karate-example.herokuapp.com/actuator/health"
+        delay: 5
 
   test-heroku:
     needs: 'deploy-heroku'
